Fix layout on smaller viewport sizes
This change set makes the app container a vertically split flex
container instead of having a `position: fixed` sidebar. Thus, the
sidebar will not run into the app content regardless of viewport width.

--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@ html, body {
 	margin: 0;
 	padding: 0;
 	scroll-behavior: smooth;
-	overflow-x: hidden;
-	width: 100vw;
 }
 
 :root {
@@ -50,9 +48,10 @@ body {
 }
 
 #nav {
-	position: fixed;
-	top: 3em; right: 0;
-	width: 15em;
+	flex: 0 0;
+	height: min-content;
+	position: sticky;
+	top: 0;
 }
 
 .form-section {
@@ -93,7 +92,12 @@ a, a:visited {
 	color: var(--link-text);
 }
 
-#lesson { font-size: 1.3em; }
+#lesson {
+	display: flex;
+	flex-direction: row;
+	font-size: 1.3em;
+}
+
 #lesson-name { margin-bottom: 3em; }
 
 #input {
@@ -101,14 +105,15 @@ a, a:visited {
 	left: -10000px;
 }
 
-#drill-content {
-	width: 64ex;
-	max-width: 80%;
-	margin: 0 auto;
-	position: relative;
+#leftside {
+	flex: 1 0;
 }
+
+#drill-content {
+	margin: 0 auto;
+}
+
 #exercise, #answer, #results {
-	width: 100%;
 	margin-top: -0.8em;
 	line-height: 3;
 }
@@ -176,8 +181,8 @@ a, a:visited {
 	text-align: center;
 }
 
-#strokes .numberBar { height: 0.5em; margin: 0; padding: 0; }
-#strokes td.wide { width: 2em; }
+#strokes .numberBar { min-height: 0.5em; margin: 0; padding: 0; }
+#strokes td.wide { min-width: 2em; }
 #strokes .leftVowel { transform: translate(+0.8em, 10%); }
 #strokes .rightVowel { transform: translate(-0.8em, 10%); }
 
